removed bacche di mirto, changed delivery text

--- a/index.html
+++ b/index.html
@@ -214,9 +214,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12 col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 text-center">
-                        <h3>Tulevat toimitukset</h3>
-                        <p class="text-muted">Seuraava erä tuoreita juustoja ja jogurttia on noudettavissa perjantaina 18.10. lähtien Makulian noutopisteeltä.</p>
-                        <p class="red">Tilaa su 13.10. mennessä!</p>
+                        <h3>Viimeinen toimitus!</h3>
+                        <p class="text-muted">Viimeinen erä tuoreita juustoja ja jogurttia on noudettavissa perjantaina 18.10. lähtien Makulian noutopisteeltä.</p>
+                        <p class="red">Tilaa viimeistään su 13.10.!</p>
                         <!--<p class="text-muted">30.9. tai sen jälkeen tehdyt tilaukset toimitetaan myöhemmin </p>-->
                     </div>
                 </div>
@@ -445,25 +445,7 @@
                 </div>
             </div>
 
-            <div class="col-md-4 col-md-offset-2 text-center">
-                <div class="service-box padding-bottom">
-                    <div class="text-center">
-                        <a class="no-hover black" href="https://shop.makulia.fi/shop/myrtin-marjat-bacche-di-mirto/"><img src="img/products/mirto-bacche2.jpg" class="img-responsive mx-auto d-block" alt="Myrtin marjoja lasipurkissa">
-                        <h3>Bacche di Mirto<br><small>Kuivattuja välimerenmyrtin marjoja</small></h3></a>
-                    </div>
-                    <div>
-                        <article>
-                            <p class="text-muted">80 g - 11,00 €</p>
-                            <a href="http://shop.makulia.fi/cart/?add-to-cart=830" class="col-xs-3"><i class="fa fa-shopping-cart fa-lg" aria-hidden="true"></i></a>
-                        </article>
-                    </div>
-                    <div class="text-center">
-                        <a href="http://shop.makulia.fi/shop/myrtin-marjat-bacche-di-mirto/" target="_blank" class="more-link"><i class="fa fa-info-circle red" aria-hidden="true"></i> Lue lisää välimerenmyrtistä</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-4 text-center">
+            <div class="col-md-4 col-md-offset-4 text-center">
                 <div class="service-box padding-bottom">
                     <div class="text-center">
                         <a class="no-hover black" href="https://shop.makulia.fi/shop/lahjakortti/"><img src="img/products/lahjakortti-1x.jpg" class="img-responsive" alt="lahjakortti">
